refined layout, inclued hit to phypidaq modules, config files, .daq files and python examples

--- a/sensors/GDK101.md
+++ b/sensors/GDK101.md
@@ -10,6 +10,11 @@ contains a microprocessor for data analysis and digital output via  I²C and UAR
 of the measured number of counts per minute and a 10-minute sliding average.  
 The latest version of the device is compatible with 3.3 V I²C signals. 
 
+**module:**  phypidaq/GDK101Config.py  
+**sensor config:**  config/GDK101.yaml  
+**examples**:  examples/config_files/GDK101Dose.daq, GDK101Rate.daq
+
+
 ## Requirements
 
 The *PhyPiDAQ* implementation directly uses the I²C interface to initialize and read
